--- a/rebar.config
+++ b/rebar.config
@@ -25,7 +25,12 @@
 {deps, [
   {gun, "1.3.0"},
   {jsx, "2.9.0"},
-  {base64url, "0.0.1"}
+  {base64url, "0.0.1"},
+  {backoff, "1.1.4"},
+  {fuse, "2.4.2"},
+  {poolboy, "1.5.1"},
+  {gproc, "~> 0.8.0"},
+  {prometheus, "~> 4.0"}
 ]}.
 
 %% == Profiles ==
